syntax = "proto2";

package protobuf;

option java_package = "edu.snu.onyx.runtime.master.grpc";

import "common.proto";

service MasterSchedulerService {
    rpc TaskGroupStateChanged(NewTaskGroupState) returns (Empty) {}
    rpc ExecutorFailed(FailedExecutor) returns (Empty) {}
}

message NewTaskGroupState {
    required string executorId = 1;
    required string taskGroupId = 2;
    required TaskGroupStateFromExecutor state = 3;
    repeated string tasksPutOnHoldIds = 4;
    optional RecoverableFailureCause failureCause = 5;
    required int32 attemptIdx = 6;
}
enum TaskGroupStateFromExecutor {
    READY = 0;
    EXECUTING = 1;
    COMPLETE = 2;
    FAILED_RECOVERABLE = 3;
    FAILED_UNRECOVERABLE = 4;
    ON_HOLD = 5;
}
enum RecoverableFailureCause {
    InputReadFailure = 0;
    OutputWriteFailure = 1;
    // There is a 3rd cause: container_failure, but this is ommitted here as it is never propagated with a control msg.
}

message FailedExecutor {
    required string executorId = 1;
    required bytes exception = 2;
}
